--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -59,7 +59,7 @@
                             <h3 class="card-title text-uppercase">
                                 <a href="#">{{ product.name }}</a>
                             </h3>
-                            <span class="item-price text-primary">${{ product.price }}</span>
+                            <span class="item-price text-primary">${{ product.price }}0 usd</span>
                         </div>
                     </div>
                 </div>
