--- a/templates/_fragments/footer.html
+++ b/templates/_fragments/footer.html
@@ -55,19 +55,19 @@
                             <h5 class="widget-title pb-2">Quick Links</h5>
                             <ul class="menu-list list-unstyled text-uppercase">
                                 <li class="menu-item pb-2">
-                                    <a href="#">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">About</a>
+                                    <a href="/about">About</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Shop</a>
+                                    <a href="/catalog">Products</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Blogs</a>
+                                    <a href="/blog">Blog</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Contact</a>
+                                    <a href="/contacts">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -86,7 +86,7 @@
                                     <a href="#">Shipping + Delivery</a>
                                 </li>
                                 <li class="menu-item pb-2">
-                                    <a href="#">Contact Us</a>
+                                    <a href="contacts">Contact Us</a>
                                 </li>
                                 <li class="menu-item pb-2">
                                     <a href="#">Faqs</a>
