--- a/templates/_fragments/header.html
+++ b/templates/_fragments/header.html
@@ -27,19 +27,19 @@
                             <a class="nav-link me-4 active" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-4" href="#company-services">Services</a>
+                            <a class="nav-link me-4" href="/services">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-4" href="/catalog">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-4" href="#smart-watches">Contacts</a>
+                            <a class="nav-link me-4" href="/contacts">Contacts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-4" href="#yearly-sale">Sale</a>
+                            <a class="nav-link me-4" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-4" href="#latest-blog">Blog</a>
+                            <a class="nav-link me-4" href="/blog">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-4" href="/news">News</a>
