--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -11,7 +11,7 @@
 				<div class="row">
 					<!-- ------------------------------------------------------------ -->
 						<h2 class="section-title" style="color:darkcyan; text-align: center; font-style: italic;">
-							Новини
+							News
 						</h2>
 						<div class="news-list">
     						{% for item in news %}
