--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <div class="content-panel">
-    <h2>about</h2>
+    <h2>{{ title }}</h2>
+    <p>Welcome to our online store!</p>
+    <p>We are a team of enthusiasts striving to make shopping as convenient and enjoyable as possible for every customer. In our store, you will find a wide selection of quality products at affordable prices.</p>
+    <p>We value the trust of our customers and are always ready to help with product selection, order processing, and resolving any issues.</p>
+    <p>Thank you for choosing us!</p>
 </div>
 {% endblock %}
