--- a/templates/home/contacts.html
+++ b/templates/home/contacts.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 <div class="content-panel">
-    <h2>Contacts</h2>
+    <h2>{{ title }}</h2>
+    <p>If you have any questions or need assistance, please contact us:</p>
+    <ul>
+        <li><strong>Phone:</strong> +38 (099) 123-45-67</li>
+        <li><strong>Email:</strong> info@yourshop.com</li>
+        <li><strong>Address:</strong> 123 Main Street, Kyiv, Ukraine</li>
+    </ul>
+    <p>We are always happy to help you!</p>
 </div>
 {% endblock %}
