--- a/templates/_fragments/mobile-products.html
+++ b/templates/_fragments/mobile-products.html
@@ -5,113 +5,74 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">Mobile Products</h2>
                 <div class="btn-right">
-                    <a href="/catalog/shop" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
+                    <a href="/catalog?category=2" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
                 </div>
             </div>
             <div class="swiper product-swiper">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper" id="gallery">
+                <!-- <div class="row" id="gallery"> -->
+                    {% for product in mobile_products %}
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
-                                <img src="{% static 'images/product-item1.jpg' %}" alt="product-item" class="img-fluid">
+                                <img src="/media/{{ product.photo }}" alt="{{ product.name }}" class="img-fluid">
                             </div>
                             <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
+                                <div class="cart-button d-flex flex-column gap-2">
+                                    <a href="/catalog?category=2" class="btn btn-medium btn-black">
+                                        Go to Shop
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
                                 <h3 class="card-title text-uppercase">
-                                    <a href="#">Iphone 10</a>
+                                    <a href="#">{{ product.name }}</a>
                                 </h3>
-                                <span class="item-price text-primary">$980</span>
+                                <span class="item-price text-primary">${{ product.price }}0 </span>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item2.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">Iphone 11</a>
-                                </h3>
-                                <span class="item-price text-primary">$1100</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item3.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">Iphone 8</a>
-                                </h3>
-                                <span class="item-price text-primary">$780</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item4.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">Iphone 13</a>
-                                </h3>
-                                <span class="item-price text-primary">$1500</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item5.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">Iphone 12</a>
-                                </h3>
-                                <span class="item-price text-primary">$1300</span>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
+            <!-- <div class="swiper product-swiper">
+                <div class="swiper-wrapper">
+                    {% for product in products|slice:":6" %}
+                    <div class="swiper-slide">
+                        <div class="product-card position-relative">
+                            <div class="image-holder">
+                                <img src="/media/{{ product.photo }}" alt="{{ product.name }}" class="img-fluid">
+                            </div>
+                            <div class="cart-concern position-absolute">
+                                <div class="cart-button d-flex flex-column gap-2">
+                                    <div class="cart-button d-flex flex-column gap-2 add-to-cart">
+                                        <input type="hidden" class="product-id" value="{{ product.id }}">
+                                        <button class="btn btn-medium btn-black add-to-cart-btn">
+                                            <svg class="cart-outline">
+                                                <use xlink:href="#cart-outline"></use>
+                                            </svg>
+                                            Add to Cart
+                                        </button>
+                                    </div>
+                                    <a href="#" class="btn btn-medium btn-black">
+                                        add to favorites
+                                        <svg class="cart-outline">
+                                            <use xlink:href="#user"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
+                                <h3 class="card-title text-uppercase">
+                                    <a href="#">{{ product.name }}</a>
+                                </h3>
+                                <span class="item-price text-primary">${{ product.price }}0 </span>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div> -->
         </div>
     </div>
     <div class="swiper-pagination position-absolute text-center"></div>
