--- a/templates/_fragments/smart-watches.html
+++ b/templates/_fragments/smart-watches.html
@@ -5,111 +5,33 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">Smart Watches</h2>
                 <div class="btn-right">
-                    <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
+                    <a href="/catalog?category=3" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
                 </div>
             </div>
             <div class="swiper product-watch-swiper">
                 <div class="swiper-wrapper">
+                    {% for product in smart_watches %}
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
-                                <img src="{% static 'images/product-item6.jpg' %}" alt="product-item" class="img-fluid">
+                                <img src="/media/{{ product.photo }}" alt="{{ product.name }}" class="img-fluid">
                             </div>
                             <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
+                                <div class="cart-button d-flex flex-column gap-2">
+                                    <a href="/catalog?category=3" class="btn btn-medium btn-black">
+                                        Go to Shop
+                                    </a>
                                 </div>
                             </div>
                             <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
                                 <h3 class="card-title text-uppercase">
-                                    <a href="#">Pink watch</a>
+                                    <a href="#">{{ product.name }}</a>
                                 </h3>
-                                <span class="item-price text-primary">$870</span>
+                                <span class="item-price text-primary">${{ product.price }}0 </span>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item7.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">Heavy watch</a>
-                                </h3>
-                                <span class="item-price text-primary">$680</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item8.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">spotted watch</a>
-                                </h3>
-                                <span class="item-price text-primary">$750</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item9.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">black watch</a>
-                                </h3>
-                                <span class="item-price text-primary">$650</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="product-card position-relative">
-                            <div class="image-holder">
-                                <img src="{% static 'images/product-item10.jpg' %}" alt="product-item" class="img-fluid">
-                            </div>
-                            <div class="cart-concern position-absolute">
-                                <div class="cart-button d-flex">
-                                    <a href="#" class="btn btn-medium btn-black">Add to Cart<svg class="cart-outline">
-                                            <use xlink:href="#cart-outline"></use>
-                                        </svg></a>
-                                </div>
-                            </div>
-                            <div class="card-detail d-flex justify-content-between pt-3">
-                                <h3 class="card-title text-uppercase">
-                                    <a href="#">black watch</a>
-                                </h3>
-                                <span class="item-price text-primary">$750</span>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
