--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -2,8 +2,6 @@
 {% load static %}
 
 {% block content %}
-<div style="padding-top: 80px;">
-</div>
 <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
     <div class="container-fluid">
         <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas"
@@ -152,7 +150,7 @@
                         </div>
                         <div class="cart-concern position-absolute">
                             <div class="cart-button d-flex flex-column gap-2">
-                                <div class="add-to-cart">
+                                <div class="cart-button d-flex flex-column gap-2 add-to-cart">
                                     <input type="hidden" class="product-id" value="{{ product.id }}">
                                     <button class="btn btn-medium btn-black add-to-cart-btn">
                                         <svg class="cart-outline">
