Fix orders page logic and related templates; display user orders correctly

--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -18,7 +18,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
         <!-- script ================================================== -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
         <!-- <script src="js/modernizr.js"></script> -->
     </head>
 
