--- a/templates/orders/index.html
+++ b/templates/orders/index.html
@@ -1,29 +1,47 @@
 {% extends '_layouts/base.html' %}
 
 {% block content %}
+{% load static %}
 <div style="padding-top: 100px;"></div>
 <div class="content-panel">
     <h2>My Orders</h2>
-    {% if orders %}
+    {% if user_orders %}
         <table class="table">
             <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Date</th>
-                    <th>Status</th>
-                    <th>Total</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for order in orders %}
-                <tr>
-                    <td>{{ order.id }}</td>
-                    <td>{{ order.created_at|date:"d.m.Y H:i" }}</td>
-                    <td>{{ order.status }}</td>
-                    <td>{{ order.total }} ₴</td>
-                </tr>
-                {% endfor %}
-            </tbody>
+				<tr>
+					<th>ID</th>
+					<th>Замовлення</th>
+					<th>Товар</th>
+					<th>Ціна</th>
+					<th>Дата</th>
+					<th>Статус</th>
+					<th>Кількість</th>
+					<th>Вибір</th>
+					<th>Видалення</th>
+				</tr>
+			</thead>
+			<body>
+				{% for order in user_orders %}
+					<tr>
+						<td>{{ order.id }}</td>
+						<td>{{ order.title }}</td>
+						<td>{{ order.product.name }}</td>
+						<td>{{ order.amount }}</td>
+						<td>{{ order.date }}</td>
+						<td>{{ order.notes }}</td>
+						<td>
+							<input type="number" class="order-qty" value="{{ order.quantity }}" min="1" data-order-id="{{ order.id }}">
+						</td>
+						<td><input type="checkbox" class="check" value="jes" checked></td>
+						<td>
+							<input type="hidden" value="{{ order.id }}">
+							<button class="btn btn-sm btn-warning del-btn">
+								Видалити
+							</button>
+						</td>
+					</tr>
+				{% endfor %}
+			</body>
         </table>
     {% else %}
         <p>You have no orders yet.</p>
